--- a/index.htm
+++ b/index.htm
@@ -103,7 +103,7 @@ a:hover{
 <div class="wrapper">
 	<div class="body">
 		<div class="info">My name is Debashis Barman and I 
-			<a href="onemandesign/">design</a> clean and minimal websites.<br/></div>
+			design clean and minimal websites.<br/></div>
 		<div class="contact">
 			<a target="_blank" rel="" href="mailto:contact@debashisbarman.in" title="Email" class="entypo-mail"></a>			
 			<a target="_blank" rel="external" href="https://www.facebook.com/debashisb04" title="Facebook" class="entypo-facebook"></a>
