Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <p>When I'm free, I spend my time exploring places and beyond, adventuring in the wilderness, learning about the world, working on tiny side projects, writing, romancing my lovely girlfriend, sketching and doodling, reading short stories and novels, listening to music and playing games. And internet. I love internet.</p>
 
-<p>Feel free to hit me up on <a href="https://twitter.com/_DebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman">Google +</a>, <a href="http://debashisbarman.tumblr.com/">Tumblr</a>, <a href="https://medium.com/@Deb_Speaks">Medium</a>, <a href="https://www.behance.net/debashisbarman/">Behance</a> or anywhere else you can find me. To get in touch, send me email.</p>
+<p>Feel free to hit me up on <a href="https://twitter.com/_DebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman">Google +</a>, <a href="http://debashisbarman.tumblr.com/">Tumblr</a>, <a href="https://medium.com/@Deb_Speaks">Medium</a>, <a href="https://www.behance.net/debashisbarman/">Behance</a> or anywhere else you can find me. To get in touch, send me <a href="mailto:debashisb04@gmail.com">email</a>.</p>
 
 <p>-Deb</p>
       </section>
