--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
 <h2><span class="entypo-picture"></span> Works on Behance</h2>
 <hr width="100px" align="left"/>
-<p>I have uploaded some of my works on <em>Behance</em> and some yet to be uploaded. Feel free to have look on my portfolio.</p>
+<p>I have uploaded some of my works on <em>Behance</em> and some yet to be uploaded. Feel free to have a look on my portfolio.</p>
 <p><span class="entypo-link"></span> <a href="http://behance.net/debashisbarman" >behance.net/debashisbarman</a></p>
 </div>
 </div>
