--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
 <h2><span class="entypo-chat"></span> Let's Talk</h2>
 <hr width="100px" align="left"/>
-<p>If you want to discuss a potential project or want to know more about me and my process, <a href="mailto:debashisb04@gmail.com" >let's have a talk</a>.</p>
+<p>If you want to discuss potential projects or want to learn more about me and my process, do not hesitate to <a href="mailto:debashisb04@gmail.com" >say hello</a>.</p>
 </div>
 </div>
 
@@ -72,17 +72,21 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
 <h2><span class="entypo-paper-plane"></span> Reach Me</h2>
 <hr width="100px" align="left"/>
-<p>Feel free to hit me up on <a href="http://twitter.com/_DebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman/">Google +</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="https://medium.com/@Deb_Speaks">Medium</a> or anywhere else you can find me.</p>
+<p>Feel free to hit me up on <a href="http://twitter.com/_DebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman/">Google +</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a>, <a href="https://medium.com/@Deb_Speaks">Medium</a> or anywhere else you can find me.</p>
 </div>
 </div>
 
-<!-- Footer -->
+<!-- Copyright -->
 <div class="row para">
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
 <p><small>&copy; 2014 Debashis Barman. All rights reserved. Powered by <a href="http://github.com" >Github</a>.</small></p>
 </div>
 </div>
+
 </div>
+
+<!-- Footer -->
+<footer></footer>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery-1.11.1.js"></script>
