--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- Header -->
 <div class="row">
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
-<h1 class="title" style="margin-left: -3px;">Debashis Barman</h1>
+<h1 class="title">Debashis Barman</h1>
 <h2 class="subtitle"><span class="entypo-quote"></span> I design minimalist website.</h2>
 </div>
 </div>
