--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <!-- Header -->
 <div class="row">
-<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h1 class="title">Debashis Barman</h1>
 <h2 class="subtitle"><span class="entypo-quote"></span> I design minimalist website.</h2>
 </div>
@@ -29,7 +29,7 @@
 
 <!-- Description -->
 <div class="row para">
-<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2 col-md-offset-2">
 <hr width="100px" align="left"/>
 <p>Hi, my name is Debashis Barman. I'm a 20 year old college guy who is currently doing Bachelor of Technology in Computer Science and Engineering at <a href="http://dbuniversity.ac.in">Assam Don Bosco University</a> in Guwahati, India. I have been addicted to the Internet since I was young and started making websites since I was in 12. I'm mostly interested in front end web designing but also otherwise enjoy any kind of programming (specially C and Kernel programming) and web development works.</p>
 <p>I try to make the websites I design and build as simple and intuitive to use as possible whilst still having a unique aesthetic appeal. I specialise in responsive front-end design, HTML/CSS and web typography.</p>
@@ -39,7 +39,7 @@
 
 <!-- Thoughts & Words -->
 <div class="row para">
-<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2 col-md-offset-2">
 <h2><span class="entypo-docs"></span> Thoughts & Words</h2>
 <hr width="100px" align="left"/>
 <p>Ocassionally I write down some of my lucid thoughts and observation on my blog. Though basically I blog on web design, web development and different relevant topics; sometimes my subjects include other non-technical staff as well.</p>
@@ -50,7 +50,7 @@
 
 <!-- Works on Behance -->
 <div class="row para">
-<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-picture"></span> Works on Behance</h2>
 <hr width="100px" align="left"/>
 <p>I have uploaded some of my works on <em>Behance</em> and some yet to be uploaded. Feel free to have a look on my portfolio.</p>
@@ -60,7 +60,7 @@
 
 <!-- Let's Talk -->
 <div class="row para">
-<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-chat"></span> Let's Talk</h2>
 <hr width="100px" align="left"/>
 <p>If you want to discuss potential projects or want to learn more about me and my process, do not hesitate to <a href="mailto:debashisb04@gmail.com" >say hello</a>.</p>
@@ -69,7 +69,7 @@
 
 <!-- Reach Me -->
 <div class="row para">
-<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-paper-plane"></span> Reach Me</h2>
 <hr width="100px" align="left"/>
 <p>Feel free to hit me up on <a href="http://twitter.com/_DebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman/">Google +</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a>, <a href="https://medium.com/@Deb_Speaks">Medium</a> or anywhere else you can find me.</p>
@@ -78,7 +78,7 @@
 
 <!-- Copyright -->
 <div class="row para">
-<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <p><small>&copy; 2014 Debashis Barman. All rights reserved. Powered by <a href="http://github.com" >Github</a>.</small></p>
 </div>
 </div>
