--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <meta name="keywords" content="Freelance Web Designer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/base.css" rel="stylesheet">
-<link href="css/entypo.css" rel="stylesheet">		
+<link href="css/entypo.css" rel="stylesheet">	
+<script src="js/modernizr.min.js"></script>	
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -18,6 +19,22 @@
 </head>
 <body>
 <div class="container">
+
+<!-- Navigation -->
+<div class="navigation">
+<div class="vertical-center">
+<div class="dotstyle dotstyle-fillin">
+	<ul>
+		<li class="current"><a href="#home">Home</a></li>
+		<li><a href="#about">About</a></li>
+		<li><a href="#thoughts-and-words">Thoughts & Words</a></li>
+		<li><a href="#works-on-behance">Works on Behance</a></li>
+		<li><a href="#let's-talk">Let's Talk</a></li>
+		<li><a href="#reach-me">Reach-Me</a></li>
+	</ul>
+</div>
+</div>
+</div>
 
 <!-- Header -->
 <div class="row">
@@ -93,5 +110,16 @@
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
+
+<script src="js/dots.js"></script>
+		<script>
+			[].slice.call( document.querySelectorAll( '.dotstyle > ul' ) ).forEach( function( nav ) {
+				new DotNav( nav, {
+					callback : function( idx ) {
+						//console.log( idx )
+					}
+				} );
+			} );
+		</script>
 </body>
 </html>
