--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <hr width="100px" align="left"/>
 <p>Hi, my name is Debashis Barman. I'm a 21 years old college guy who is currently doing Bachelor of Technology in Computer Science and Engineering at <a href="http://dbuniversity.ac.in">Assam Don Bosco University</a> in Guwahati, India. I have been addicted to the Internet since I was young and started making websites since I was in 12. I'm mostly interested in front end web designing but also otherwise enjoy any kind of programming (specially C and Kernel programming) and web development works.</p>
 <p>I try to make the websites I design and build as simple and intuitive to use as possible whilst still having a unique aesthetic appeal. I specialise in responsive front-end design, HTML/CSS and web typography.</p>
-<p>When I'm free, I spend my time exploring places and beyond, adventuring in the wilderness, learning about the world, working on tiny side projects, writing, romancing my <em>lovely girlfriend</em>, sketching and doodling, reading short stories and novels, listening to music and playing games. And internet. I love internet.</p>
+<p>When I'm free, I spend my time exploring places and beyond, adventuring in the wilderness, learning about the world, working on tiny side projects, writing, romancing my <em>lovely girlfriend</em>, sketching and doodling, <span class="fun">reading</span> short stories and novels, listening to music and playing games. And internet. I love internet.</p>
 </div>
 </div>
 
@@ -42,7 +42,7 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2 col-md-offset-2">
 <h2><span class="entypo-docs"></span> Thoughts & Words</h2>
 <hr width="100px" align="left"/>
-<p>Ocassionally I write down some of my lucid thoughts and observation on my blog. Though basically I blog on web design, web development and different relevant topics; sometimes my subjects include other non-technical staff as well.</p>
+<p>Ocassionally I write down some of my lucid thoughts and observation on my blog. Though basically I blog on web design, web development and different relevant topics; sometimes my subjects include other <em>non-technical</em> staff as well.</p>
 <p><span class="entypo-link"></span> <a href="http://debashisbarman.tumblr.com" >debashisbarman.tumblr.com</a>.</p>
 <p><span class="entypo-link"></span> <a href="https://medium.com/@Deb_Speaks" >medium.com/@Deb_Speaks</a>.</p>
 </div>
@@ -63,7 +63,7 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-chat"></span> Let's Talk</h2>
 <hr width="100px" align="left"/>
-<p>If you want to discuss potential projects or want to learn more about me and my process, do not hesitate to <a href="mailto:debashisb04@gmail.com" >say hello</a>.</p>
+<p>If you want to discuss <em>potential</em> projects or want to learn more about me and my process, do not hesitate to <a href="mailto:debashisb04@gmail.com" >say hello</a>.</p>
 </div>
 </div>
 
@@ -72,7 +72,7 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-paper-plane"></span> Reach Me</h2>
 <hr width="100px" align="left"/>
-<p>Feel free to hit me up on <a href="http://twitter.com/_DebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman/">Google +</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a>, <a href="https://medium.com/@Deb_Speaks">Medium</a> or anywhere else you can find me.</p>
+<p>Feel free to hit me up on <a href="http://twitter.com/_DebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman/">Google +</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a>, <a href="https://medium.com/@Deb_Speaks">Medium</a> or anywhere <em>else</em> you can find me.</p>
 </div>
 </div>
 
