--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <!-- Copyright -->
 <div class="row para">
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
-<p><small>&copy; 2014 Debashis Barman. All rights reserved. Powered by <a href="http://github.com" >Github</a>.</small></p>
+<p><small>Copyright &copy; 2014 Debashis Barman. All rights reserved. Powered by <a href="http://github.com" >Github</a>.</small></p>
 </div>
 </div>
 
