--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <!--[if lt IE9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
 <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0./respond.min.js"></script>
-<![endif]-->	
+<![endif]-->
 </head>
 <body>
 <div class="container">
@@ -31,9 +31,25 @@
 <div class="row para">
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2 col-md-offset-2">
 <hr width="100px" align="left"/>
-<p>Hi, my name is Debashis Barman. I'm a 21 years old college guy who is currently doing Bachelor of Technology in Computer Science and Engineering at <a href="http://dbuniversity.ac.in">Assam Don Bosco University</a> in Guwahati, India. I have been addicted to the Internet since I was young and started making websites since I was in 12. I'm mostly interested in front end web designing but also otherwise enjoy any kind of programming (specially C and Kernel programming) and web development works.</p>
+<p>Hi, my name is Debashis Barman. I'm a 21 years old college guy who is currently doing Bachelor of Technology in Computer Science and Engineering at <a href="http://dbuniversity.ac.in">Assam Don Bosco University</a> in Guwahati, India. I have been addicted to the Internet since I was young and started making websites since I was in 11. I'm mostly interested in front end web designing but also otherwise enjoy any kind of programming (specially C and Kernel programming) and web development works.</p>
 <p>I try to make the websites I design and build as simple and intuitive to use as possible whilst still having a unique aesthetic appeal. I specialise in responsive front-end design, HTML/CSS and web typography.</p>
 <p>When I'm free, I spend my time exploring places and beyond, adventuring in the wilderness, learning about the world, working on tiny side projects, writing, romancing my <em>lovely girlfriend</em>, sketching and doodling, <span class="fun">reading</span> short stories and novels, listening to music and playing games. And internet. I love internet.</p>
+</div>
+</div>
+
+<!-- Timeline -->
+<div class="row para">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2 col-md-offset-2">
+<h2><span class="entypo-back-in-time"></span> A Brief Timeline</h2>
+<hr width="100px" align="left"/>
+<p>Here is a brief history of time, my life and some of important events.</p>
+<ul class="timeline">
+<li>I was born<span class="year">1993</span></li>
+<li>First went to school<span class="year">1997</span></li>
+<li>Went to college<span class="year">2010</span></li>
+<li>Started web designing<span class="year">2011</span></li>
+<li>Started graduation<span class="year">2012</span></li>
+</ul>
 </div>
 </div>
 
