--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <!-- Website content and design (c) Debashis Barman -->
 <head>
-<title>Debashis Barman</title>
+<title>Debashis Barman | Freelance Web Designer</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable=no">
 <meta name="description" content="Debashis Barman is a Freelance Web Designer. He specializes in Minimalist Web Design, Responsive Layout and Web Typography."/>
-<meta name="keywords" content="Freelance Web Designer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
+<meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/base.css" rel="stylesheet">
 <link href="css/entypo.css" rel="stylesheet">		
