--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <hr width="100px" align="left"/>
 <p>Hi, my name is Debashis Barman. I'm a 21 years old college guy who is currently doing Bachelor of Technology in Computer Science and Engineering at <a href="http://dbuniversity.ac.in">Assam Don Bosco University</a> in Guwahati, India. I have been addicted to the Internet since I was young and started making websites since I was in 11. I'm mostly interested in front end web designing but also otherwise enjoy any kind of programming (specially C and Kernel programming) and web development works.</p>
 <p>I try to make the websites I design and build as simple and intuitive to use as possible whilst still having a unique aesthetic appeal. I specialise in responsive front-end design, HTML/CSS and web typography.</p>
-<p>When I'm free, I spend my time exploring places and beyond, adventuring in the wilderness, learning about the world, working on tiny side projects, writing, romancing my <em>lovely girlfriend</em>, sketching and doodling, <span class="fun">reading</span> short stories and novels, listening to music and playing games. And internet. I love internet.</p>
+<p>When I'm free, I spend my time exploring places and beyond, adventuring in the wilderness, learning about the world, working on tiny side projects, writing, romancing my <em>lovely girlfriend</em>, sketching and doodling, <s>reading</s> short stories and novels, listening to music and playing games. And internet. I love internet.</p>
 </div>
 </div>
 
@@ -59,8 +59,11 @@
 <h2><span class="entypo-docs"></span> Thoughts & Words</h2>
 <hr width="100px" align="left"/>
 <p>Ocassionally I write down some of my lucid thoughts and observation on my blog. Though basically I blog on web design, web development and different relevant topics; sometimes my subjects include other non-technical staff as well.</p>
-<p><span class="entypo-link"></span> <a href="http://debashisbarman.tumblr.com" >debashisbarman.tumblr.com</a>.</p>
-<p><span class="entypo-link"></span> <a href="https://medium.com/@Deb_Speaks" >medium.com/@Deb_Speaks</a>.</p>
+<ul class="list-unstyled">
+<li><span class="entypo-link"></span> <a href="http://debashisbarman.tumblr.com" >debashisbarman.tumblr.com</a></li>
+<li><span class="entypo-link"></span> <a href="https://medium.com/@Deb_Speaks" >medium.com/@Deb_Speaks</a></li>
+<li><span class="entypo-link"></span> <a href="https://debashisbarman.wordpress.com" >debashisbarman.wordpress.com</a></li>
+</ul>
 </div>
 </div>
 
@@ -70,7 +73,9 @@
 <h2><span class="entypo-picture"></span> Works on Behance</h2>
 <hr width="100px" align="left"/>
 <p>I have uploaded some of my works on <em>Behance</em> and some yet to be uploaded. Feel free to have a look on my portfolio.</p>
-<p><span class="entypo-link"></span> <a href="http://behance.net/debashisbarman" >behance.net/debashisbarman</a></p>
+<ul class="list-unstyled">
+<li><span class="entypo-link"></span> <a href="http://behance.net/debashisbarman" >behance.net/debashisbarman</a></li>
+</ul>
 </div>
 </div>
 
@@ -83,12 +88,29 @@
 </div>
 </div>
 
-<!-- Reach Me -->
-<div class="row para">
+<!-- Reach Me (hidden-xs) -->
+<div class="row para hidden-xs">
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-paper-plane"></span> Reach Me</h2>
 <hr width="100px" align="left"/>
 <p>Feel free to hit me up on <a href="http://twitter.com/_DebashisBarman">Twitter</a>, <a href="http://facebook.com/debashisb04">Facebook</a>, <a href="http://plus.google.com/+DebashisBarman/">Google +</a>, <a href="https://debashisbarman.tumblr.com">Tumblr</a>, <a href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a>, <a href="https://medium.com/@Deb_Speaks">Medium</a> or anywhere else you can find me.</p>
+</div>
+</div>
+
+<!-- Reach Me (visible-xs) -->
+<div class="row para visible-xs">
+<div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
+<h2><span class="entypo-paper-plane"></span> Reach Me</h2>
+<hr width="100px" align="left"/>
+<p>Feel free to hit me up on social networks or anywhere else you can find me.</p>
+<ul class="list-unstyled">
+<li><a href="http://twitter.com/_DebashisBarman">Twitter</a></li>
+<li><a href="http://facebook.com/debashisb04">Facebook</a></li>
+<li><a href="http://plus.google.com/+DebashisBarman/">Google +</a></li>
+<li><a href="https://debashisbarman.tumblr.com">Tumblr</a></li>
+<li><a href="http://in.linkedin.com/pub/debashis-barman/66/a26/b67">LinkedIn</a></li>
+<li><a href="https://medium.com/@Deb_Speaks">Medium</a></li>
+</ul>
 </div>
 </div>
 
