--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <meta name="description" content="Debashis Barman is a Freelance Web Designer. He specializes in Minimalist Web Design, Responsive Layout and Web Typography."/>
 <meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 <link href="css/bootstrap.min.css" rel="stylesheet">
-<link href="css/base.css" rel="stylesheet">
-<link href="css/entypo.css" rel="stylesheet">		
+<link href="css/base.min.css" rel="stylesheet">
+<link href="css/entypo.min.css" rel="stylesheet">		
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE9]>
 <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
@@ -127,7 +127,7 @@
 <footer></footer>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="js/jquery-1.11.1.js"></script>
+<script src="js/jquery-1.11.1.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="js/bootstrap.min.js"></script>
