--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <!-- Website content and design (c) Debashis Barman -->
+<!-- Version 1.3.28 (Stable) -->
 <head>
 <title>Debashis Barman | Freelance Web Designer</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -102,7 +103,7 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-paper-plane"></span> Reach Me</h2>
 <hr width="100px" align="left"/>
-<p>Feel free to hit me up on social networks or anywhere else you can find me.</p>
+<p>Feel free to hit me up on social media or anywhere else you can find me.</p>
 <ul class="list-unstyled social">
 <li><a href="http://twitter.com/_DebashisBarman">Twitter</a></li>
 <li><a href="http://facebook.com/debashisb04">Facebook</a></li>
