--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 </div>
 
 <!-- Here I am -->
-<div class="row para hidden-xs">
+<div class="row para hidden-xs hidden-sm">
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-search"></span> Where to find</h2>
 <hr width="100px" align="left"/>
