--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2">
 <h2><span class="entypo-search"></span> Where to find</h2>
 <hr width="100px" align="left"/>
-<img src="images/map.svg" class="img-responsive" alt="Where to find"></img>
+<img src="images/map.svg" class="img-responsive" alt="Where to find"/>
 <div class="location-marker">
 <span data-tooltip="Guwahati, India">
 <span class="entypo-location"></span>
