--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Debashis Barman is a Freelance Web Designer. He specializes in Minimalist Web Design, Responsive Layout and Web Typography."/>
 <meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 <link target="_blank" href="css/bootstrap.min.css" rel="stylesheet">
-<link target="_blank" href="css/base.min.css" rel="stylesheet">
+<link target="_blank" href="css/base.css" rel="stylesheet">
 <link target="_blank" href="css/entypo.min.css" rel="stylesheet">		
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!--[if lt IE9]>
@@ -19,6 +19,12 @@
 </head>
 <body>
 <div class="container">
+
+<!-- Twitter Follow Button -->
+<div class="twitter visible-md visible-lg">
+<a href="https://twitter.com/_DebashisBarman" class="btn btn-info" data-show-count="false" data-size="large" data-show-screen-name="false"><span class="entypo-twitter"></span> Follow</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+</div>
 
 <!-- Header -->
 <div class="row">
