--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
 <body>
 <div class="container">
 
-<!-- Twitter Follow Button -->
-<div class="twitter visible-md visible-lg">
+<!-- Masterhead -->
+<div class="row master-head">
+<div class="col-xs-4 col-sm-4 col-md-1 col-lg-1">
+<img src="images/profile.jpg" alt="Debashis Barman" title="Debashis Barman" class="img-circle img-responsive"/>
+</div>
+<div class="visible-lg col-lg-2 col-lg-offset-9 follow-btn">
 <a target="_blank" href="https://twitter.com/_DebashisBarman" class="btn btn-default" data-show-count="false" data-size="large" data-show-screen-name="false"><span class="entypo-twitter"></span> Follow</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+</div>
 </div>
 
 <!-- Header -->
@@ -41,6 +46,7 @@
 <p>Hi, my name is Debashis Barman. I'm a 21 year old college guy who is currently doing Bachelor of Technology in Computer Science and Engineering at <a target="_blank" href="http://dbuniversity.ac.in">Assam Don Bosco University</a> in Guwahati, India. I have been addicted to the Internet since I was young and started making websites since I was in 11. I'm mostly interested in front end web designing but also otherwise enjoy any kind of programming (specially C and Kernel programming) and web development works.</p>
 <p>I try to make the websites I design and build as simple and intuitive to use as possible whilst still having a unique aesthetic appeal. I specialise in responsive front-end design, HTML/CSS and web typography.</p>
 <p>When I'm free, I spend my time exploring places and beyond, adventuring in the wilderness, learning about the world, working on tiny side projects, writing, romancing my <em>lovely girlfriend</em>, sketching and doodling, <span class="fun">reading</span> short stories and novels, listening to music and playing games. And internet. I love internet.</p>
+<p>If you want to discuss potential projects or want to learn more about me and my process, do not hesitate to <a target="_blank" href="mailto:debashisb04@gmail.com" >say hello</a>.</p>
 </div>
 </div>
 
@@ -65,12 +71,15 @@
 <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 col-lg-offset-2 col-md-offset-2 col-md-offset-2">
 <h2><span class="entypo-docs"></span> Thoughts & Words</h2>
 <hr width="100px" align="left"/>
-<p>Ocassionally I write down some of my lucid thoughts and observation on my blog. Though basically I blog on web design, web development and different relevant topics; sometimes my subjects include other non-technical staff as well.</p>
-<ul class="list-unstyled">
-<li><span class="entypo-link"></span> <a target="_blank" href="http://debashisbarman.tumblr.com" >debashisbarman.tumblr.com</a></li>
-<li><span class="entypo-link"></span> <a target="_blank" href="https://medium.com/@Deb_Speaks" >medium.com/@Deb_Speaks</a></li>
-<li><span class="entypo-link"></span> <a target="_blank" href="https://debashisbarman.wordpress.com" >debashisbarman.wordpress.com</a></li>
-</ul>
+<p>Ocassionally I write down some of my lucid thoughts and observation on my blog. Though basically I blog on web design, web development and different relevant topics; sometimes my subjects include other non-technical staff as well. Here are some recent posts.</p>
+<dl>
+<dt><h3><a target="_blank" href="http://debashisbarman.tumblr.com/post/86189526364/whitespace-in-webdesign-an-example">Whitespace in Webdesign: an Example</a></h3></dt>
+<dd><small><span class="entypo-clock"></span> Published on May 19, 2014</small></dd>
+<dt><h3><a target="_blank" href="http://debashisbarman.tumblr.com/post/83708455740/elements-of-modern-web-design">Elements of Modern Web Design</a></h3></dt>
+<dd><small><span class="entypo-clock"></span> Published on April 24, 2014</small></dd>
+<dt><h3><a target="_blank" href="http://debashisbarman.tumblr.com/post/82093725972/minimalist-web-design">Minimalist Web Design</a></h3></dt>
+<dd><small><span class="entypo-clock"></span> Published on April 8, 2014</small></dd>
+</dl>
 </div>
 </div>
 
