--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html>
+<!-- Website content and design (c) Debashis Barman -->
+<!-- Version 2.0.0 (Unstable) 08/07/2014 -->
 <head>
-<title>Debashis Barman</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Debashis Barman | Freelance Web Designer</title>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale = 1.0, user-scalable=no">
+<meta name="description" content="Debashis Barman is a Freelance Web Designer. He specializes in Minimalist Web Design, Responsive Layout and Web Typography."/>
+<meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/base2.0.0.css" rel="stylesheet">	
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
