--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
 <h1><span class="glyphicon glyphicon-pencil"></span> Writings</h1>
 <dl class="post para">
 <dt><h4><a target="_blank" href="http://debashisbarman.tumblr.com/post/86189526364/whitespace-in-webdesign-an-example">Whitespace in Webdesign: an Example</a></h4></dt>
-<dd><small><span class="glyphicon glyphicon-calendar"></span> Published on May 19, 2014</small></dd>
+<dd><small><span class="glyphicon glyphicon-time"></span> Published on May 19, 2014</small></dd>
 <dt><h4><a target="_blank" href="http://debashisbarman.tumblr.com/post/83708455740/elements-of-modern-web-design">Elements of Modern Web Design</a></h4></dt>
 <dd><small><span class="glyphicon glyphicon-time"></span> Published on April 24, 2014</small></dd>
 <dt><h4><a target="_blank" href="http://debashisbarman.tumblr.com/post/82093725972/minimalist-web-design">Minimalist Web Design</a></h4></dt>
