--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
 </div>
 
 <div class="index">
-<h1>Index</h1>
+<h2>Articles</h2>
 <ul>
 {% for post in site.posts %}
 <li><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></li>
