--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ layout: default
 </div>
 
 <div class="menu">
-{% include about.html %}
+{% include other.html %}
 </div>
 
 <div class="disclaimer">
