--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@ layout: default
 {% include welcome.html %}
 </div>
 
+<div class="project">
+<h2>Projects</h2>
+<ul>
+<li>
+<h3><a href="https://github.com/debashisbarman/Mini-OS">Mini Operating System</a></h3>
+<p>Mini OS is a Bare Bone Operating System written in C and Assembly which could be loaded with the GRUB bootloader on an x86 system. The purpose of this project is to make something stable and simple.</p>
+</li>
+</ul>
+</div>
+
 <div class="index">
 <h2>Articles</h2>
 <ul>
