--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ layout: default
 {% for post in site.posts %}
 <li>
 <h3><a href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h3>
-{{ post.excerpt }}
+<!--{{ post.excerpt }}-->
 </li>
 {% endfor %}
 </ul>
