--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 ---
-<div class="about-me">
+<div class="about-m">
 {% include welcome.html %}
 </div>
 
-<div class="index">
+<div class="inde">
 {% include projects.html %}
 </div>
 
-<div class="index">
+<div class="inde">
 <h2>Articles</h2>
 <ul>
 {% for post in site.posts %}
@@ -21,14 +21,14 @@ layout: default
 </ul>
 </div>
 
-<div class="links">
+<div class="link">
 {% include references.html %}
 </div>
 
-<div class="menu">
+<div class="men">
 {% include other.html %}
 </div>
 
-<div class="disclaimer">
+<div class="disclaime">
 {% include disclaimer.html %}
 </div>
