--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
 ---
-<div class="about-m">
+<div class="block">
 {% include welcome.html %}
 </div>
 
-<div class="inde">
+<div class="block">
 {% include projects.html %}
 </div>
 
-<div class="inde">
+<div class="block">
 <h2>Articles</h2>
 <ul>
 {% for post in site.posts %}
@@ -21,14 +21,14 @@ layout: default
 </ul>
 </div>
 
-<div class="link">
+<div class="block">
 {% include references.html %}
 </div>
 
-<div class="men">
+<div class="block">
 {% include other.html %}
 </div>
 
-<div class="disclaime">
+<div class="block">
 {% include disclaimer.html %}
 </div>
