--- a/index.html
+++ b/index.html
@@ -1,8 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<title>Debashis Barman | Developer // Web Designer</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+
+<title>Debashis Barman</title>
+
+<meta name="description" content="Debashis Barman is a Freelance Web Designer. He specializes in Minimalist Web Design, Responsive Layout and Web Typography.
+">
+<meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
+
 <link href="assets/kathamo/kathamo.css" rel="stylesheet"/>
+
+<link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <style>
 
 h1, h2 { font-weight: ; }
