Updating my site

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ h1 { font-size: 34px; }
 
 <div class="col-lg-4 col-md-5 col-sm-12">
 <div class="cover">
-<p>Freelance developer and web designer; living in India; specialize in minimalist mobile-friendly development; passionate programmer and occasional blogger; (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>).</p>
+<p>Freelance developer and web designer; specialize in minimalist mobile-friendly development; passionate programmer and occasional blogger; (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>).</p>
 
 <p>Feel free to navigate my site.</p>
 
@@ -77,7 +77,7 @@ h1 { font-size: 34px; }
 <p>The best way to contact me is on Twitter. Follow me <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a> for more updates.</p>
 
 <hr>
-<p><small>Built with <a class="credit" target="_blank" href="http://jekyllrb.com/">Jekyll</a> and hosted on <a class="credit" target="_blank" href="http://pages.github.com/">Github Pages</a></small>.</p>
+<p><small>Copyright &copy; 2015 Debashis Barman.</small>.</p>
 </div>
 </div>
 
