Updating my site

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ h1 { font-size: 34px; }
 <p>The best way to contact me is on Twitter. Follow me <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a> for more updates.</p>
 
 <hr>
-<p><small>Copyright &copy; 2015 Debashis Barman.</small>.</p>
+<p><small>Copyright &copy; 2015 Debashis Barman.</small></p>
 </div>
 </div>
 
