Reconstructing my site

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ h1 { font-size: 34px; }
 <li><a target="_blank" href="https://www.behance.net/debashisbarman/">Design</a></li>
 <li><a target="_blank" href="https://www.medium.com/@iDeb/">Writing // Blog</a></li>
 </ul>
-<p>The best way to contact me is on Twitter. Follow me <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a> for more updates.</p>
+<p>The best way to contact me is on Twitter. <br>Follow me <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a> for more updates.</p>
 
 <hr>
 <p><small>Copyright &copy; 2015 Debashis Barman.</small></p>
