--- a/index.html
+++ b/index.html
@@ -37,13 +37,21 @@ h1 { font-size: 34px; }
 }
 
 @media (max-width: 767px) {
-
-.page { height: 100%; padding: 34px 0; width: 100%; }
+p { line-height: 2; }
+.page { height: 100%; padding: 5% 0; width: 89%; margin: 0 auto; }
+.banner { width: 80%; height: 233px; padding: 5% 10%; background-image: url(assets/images/background.jpg); background-position: center center; background-size: cover; }
+h1 { font-size: 13px; font-weight: 600; }
+h2 { font-size: 10px; font-style: ; }
 }
 
 </style>
 </head>
 <body>
+<div class="banner visible-sm">
+<h1>Debashis Barman</h1>
+<h2>Web Designer // Developer</h2>
+</div>
+
 <div id="getting-started" class="page clearfix">
 <div class="vertical-center-wrapper">
 <div class="vertical-center">
@@ -53,31 +61,26 @@ h1 { font-size: 34px; }
 
 <div class="col-lg-offset-3 col-lg-3 col-md-offset-1 col-md-4 col-sm-12">
 <div class="hidden-sm text-right">
-<img class="img-circle img-responsive" src="assets/images/profile.png" style="margin-top: -95px;margin-right: -55px;">
+
+<img class="img-circle img-responsive" src="assets/images/profile.png" style="margin-top: -99.5px;margin-right: -55px;">
 <h1 style="margin-top: -28px">Debashis Barman</h1>
-<h5><small>Developer // Web Designer</small></h5>
-</div>
-<div class="visible-sm">
-<h1>Debashis Barman</h1>
-<h4><small>Developer // Web Designer</small></h4>
+<h5><small>Web Designer // Developer</small></h5>
+
 </div>
 </div>
 
 <div class="col-lg-5 col-md-5 col-sm-12">
 <div class="cover">
-<p>Freelance developer and web designer; specialize in minimalist mobile-friendly development; passionate programmer and occasional blogger; (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>).</p>
+<p>I'm a minimalist front-end designer and developer, also a passionate programmer. I specialize in clean and intuitive mobile-friendly layout. (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>)</p> 
 
-<p>Feel free to navigate my site.</p>
+<p>I enjoy programming, writing CSS and doing projects, specially on web and <a target="_blank" href="https://github.com/debashisbarman/Mini-OS/">operating system</a>.</p>
 
-<ul class="li-circle">
-<li><a target="_blank" href="https://www.github.com/debashisbarman/">Development</a></li>
-<li><a target="_blank" href="https://www.behance.net/debashisbarman/">Design</a></li>
-<li><a target="_blank" href="https://www.medium.com/@iDeb/">Writing // Blog</a></li>
-</ul>
-<p>The best way to contact me is on Twitter. Follow me <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a> for more updates.</p>
+<p>Some of my works are available on <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>. You can find me on <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>.</p>
+<p>I love minimalism and occasionally <a target="_blank" href="https://www.medium.com/@iDeb/">blog</a>.</p>
 
-<hr>
-<p><small>Copyright &copy; 2015 Debashis Barman.</small></p>
+<p>The best way to contact me is on Twitter. <br>Follow me <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a>. I normally tweet on design, minimalism and technology.</p>
+
+
 </div>
 </div>
 
