--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ li { padding-left: 8px; }
 
 h1 { font-size: 34px; }
 .page { height: 100vh; width: 100%; }
-.cover { padding-left: 8px; padding-top: 23px; }
+.cover { padding-left: 13px; padding-top: 23px; }
 }
 
 @media (min-width: 768px) and (max-width: 1023px){
-.page { height: 100%; padding: 60px 0; width: 100%; }
-.cover { padding-left: 5px; }
+.page { height: 100vh; width: 100%; }
+.cover { padding-left: 21px; }
 }
 
 @media (max-width: 767px) {
