Reconstructing my site

--- a/index.html
+++ b/index.html
@@ -47,11 +47,12 @@ h2 { font-size: 10px; font-style: ; }
 </style>
 </head>
 <body>
+<!--
 <div class="banner visible-sm">
 <h1>Debashis Barman</h1>
 <h2>Web Designer // Developer</h2>
 </div>
-
+-->
 <div id="getting-started" class="page clearfix">
 <div class="vertical-center-wrapper">
 <div class="vertical-center">
@@ -71,7 +72,7 @@ h2 { font-size: 10px; font-style: ; }
 
 <div class="col-lg-5 col-md-5 col-sm-12">
 <div class="cover">
-<p>I'm a minimalist front-end designer and developer, also a passionate programmer. I specialize in clean and intuitive mobile-friendly layout. (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>)</p> 
+<p><span class="visible-sm">Hi, there ! My name is Debashis Barman and </span>I'm a minimalist front-end designer and developer<span class="hidden-sm">, also a passionate programmer</span>. I specialize in clean and intuitive mobile-friendly layout. (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>)</p> 
 
 <p>I enjoy programming, writing CSS and doing projects, specially on web and <a target="_blank" href="https://github.com/debashisbarman/Mini-OS/">operating system</a>.</p>
 
