Reconstructing my site

--- a/index.html
+++ b/index.html
@@ -72,7 +72,9 @@ h2 { font-size: 10px; font-style: ; }
 
 <div class="col-lg-5 col-md-5 col-sm-12">
 <div class="cover">
-<p><span class="visible-sm">Hi, there ! My name is Debashis Barman and </span>I'm a minimalist front-end designer and developer<span class="hidden-sm">, also a passionate programmer</span>. I specialize in clean and intuitive mobile-friendly layout. (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>)</p> 
+<p class="hidden-sm">I'm a minimalist front-end designer and developer, also a passionate programmer. I specialize in clean and intuitive mobile-friendly layout. (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>)</p> 
+
+<p class="visible-sm">Hi, there ! My name is Debashis Barman and I'm a minimalist front-end designer and developer. I specialize in clean and intuitive mobile-friendly layout. (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>)</p>
 
 <p>I enjoy programming, writing CSS and doing projects, specially on web and <a target="_blank" href="https://github.com/debashisbarman/Mini-OS/">operating system</a>.</p>
 
