--- a/index.html
+++ b/index.html
@@ -17,32 +17,11 @@
 <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <style>
 
-h1, h2 { font-weight: ; }
+h4 { margin: 34px 0; line-height: 1.6; }
 
-p { margin-bottom: 21px; }
-li { padding-left: 8px; }
+a:hover { border: none; }
 
-.img-circle { max-width: ; }
-
-@media (min-width: 1024px) {
-
-h1 { font-size: 34px; }
 .page { height: 100vh; width: 100%; }
-.cover { padding-left: 13px; padding-top: 23px; }
-}
-
-@media (min-width: 768px) and (max-width: 1023px){
-.page { height: 100vh; width: 100%; }
-.cover { padding-left: 21px; }
-}
-
-@media (max-width: 767px) {
-p { line-height: 2; }
-.page { height: 100%; padding: 5% 0; width: 89%; margin: 0 auto; }
-.banner { width: 80%; height: 233px; padding: 5% 10%; background-image: url(assets/images/background.jpg); background-position: center center; background-size: cover; }
-h1 { font-size: 13px; font-weight: 600; }
-h2 { font-size: 10px; font-style: ; }
-}
 
 </style>
 </head>
@@ -54,30 +33,10 @@ h2 { font-size: 10px; font-style: ; }
 <div class="container">
 <div class="row">
 
-<div class="col-lg-offset-3 col-lg-3 col-md-offset-1 col-md-4 col-sm-12">
-<div class="hidden-sm text-right">
-
-<img class="img-circle img-responsive" src="assets/images/profile.png" style="margin-top: -99.5px;margin-right: -55px;">
-<h1 style="margin-top: -28px">Debashis Barman</h1>
-<h5><small>Web Designer // Developer</small></h5>
-
-</div>
-</div>
-
-<div class="col-lg-5 col-md-5 col-sm-12">
-<div class="cover">
-<p class="hidden-sm">I'm a minimalist front-end designer and developer, also a passionate programmer. I specialize in clean and intuitive mobile-friendly layout. (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>)</p> 
-
-<p class="visible-sm">Hi, there ! My name is Debashis Barman and I'm a minimalist front-end designer and developer. I specialize in clean and intuitive mobile-friendly layout. (<a target="_blank" href="assets/DebashisBarmanResume.pdf">resume</a>)</p>
-
-<p>I enjoy programming, writing CSS and doing projects, specially on web and <a target="_blank" href="https://github.com/debashisbarman/Mini-OS/">operating system</a>.</p>
-
-<p>Some of my works are available on <a target="_blank" href="http://www.behance.net/debashisbarman/">Behance</a>. You can find me on <a target="_blank" href="https://www.github.com/debashisbarman/">Github</a>.</p>
-<p>I love minimalism and occasionally <a target="_blank" href="https://www.medium.com/@iDeb/">blog</a>.</p>
-
-<p>The best way to contact me is on Twitter. <br>Follow me <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a>. I normally tweet on design, minimalism and technology.</p>
-
-</div>
+<div class="col-lg-10 col-md-12 col-sm-12">
+<h1>Debashis Barman</h1>
+<h4>Freelance <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a> and web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></h5>
+<h5>Follow on <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a></h5></div>
 </div>
 
 </div>
@@ -88,3 +47,4 @@ h2 { font-size: 10px; font-style: ; }
 </div>
 </body>
 </html>
+
