--- a/index.html
+++ b/index.html
@@ -8,18 +8,17 @@
 
 <title>Debashis Barman</title>
 
-<meta name="description" content="Debashis Barman is a Freelance Web Designer. He specializes in Minimalist Web Design, Responsive Layout and Web Typography.
-">
+<meta name="description" content="Freelance web designer and developer; specialize in minimalist mobile-friendly development; passionate programmer and occasional blogger">
 <meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 
-<link href="assets/kathamo/kathamo.css" rel="stylesheet"/>
+<link href="includes/kathamo/kathamo.css" rel="stylesheet"/>
 
 <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <style>
+p { font-size: 21px; font-weight: 500; font-family: serif; color: #666; line-height: 34px; }
 
-h4 { margin: 34px 0; line-height: 1.6; }
-
-a:hover { border: none; }
+a, a:visited { color: #39AE7B; text-decoration: none; outline: 0; }
+a:hover, a:focus { color: #39AE7B; border: none; }
 
 .page { height: 100vh; width: 100%; }
 
@@ -33,10 +32,8 @@ a:hover { border: none; }
 <div class="container">
 <div class="row">
 
-<div class="col-lg-10 col-md-12 col-sm-12">
-<h1>Debashis Barman</h1>
-<h4>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></h4>
-<h5>Follow on <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a></h5>
+<div class="col-lg-8 col-md-12 col-sm-12">
+<p>@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></p>
 </div>
 
 </div>
