--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <meta name="description" content="Freelance web designer and developer; specialize in minimalist mobile-friendly development; passionate programmer and occasional blogger">
 <meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
 
-<link href="includes/kathamo/kathamo.css" rel="stylesheet"/>
+<link href="assets/kathamo/kathamo.css" rel="stylesheet"/>
 
 <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <style>
