--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ a:hover, a:focus { color: #39AE7B; border: none; }
 <div class="row">
 
 <div class="col-lg-8 col-md-12 col-sm-12">
-<p>@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></p>
+<p>@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="http://debashisbarman.tumblr.com/">blogger</a></p>
 </div>
 
 </div>
