--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 <style>
-p { font-size: 21px; font-weight: 500; font-family: serif; color: #666; line-height: 34px; }
+p, blockquote { font-size: 21px; font-weight: 500; font-family: serif; color: #666; line-height: 34px; }
 
 a, a:visited { color: #39AE7B; text-decoration: none; outline: 0; }
 a:hover, a:focus { color: #39AE7B; border: none; }
@@ -33,9 +33,10 @@ a:hover, a:focus { color: #39AE7B; border: none; }
 <div class="row">
 
 <div class="col-lg-8 col-md-12 col-sm-12">
-<p>@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="http://debashisbarman.tumblr.com/">blogger</a></p>
-</div>
-
+<blockquote class="hidden-sm">@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="http://debashisbarman.tumblr.com/">blogger</a>
+<cite>Debashis Barman, 26.129478°N, 91.620512°E</cite>
+</blockquote>
+<p class="vissible-sm">@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="http://debashisbarman.tumblr.com/">blogger</a></p></div>
 </div>
 </div>
 
