--- a/index.html
+++ b/index.html
@@ -33,11 +33,9 @@ a:hover, a:focus { color: #39AE7B; border: none; }
 <div class="row">
 
 <div class="col-lg-8 col-md-12 col-sm-12">
-<blockquote class="hidden-sm">@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="http://debashisbarman.tumblr.com/">blogger</a>
+<blockquote>@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="http://debashisbarman.tumblr.com/">blogger</a>
 <cite>Debashis Barman, 26.129478°N, 91.620512°E</cite>
-</blockquote>
-<p class="vissible-sm">@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="http://debashisbarman.tumblr.com/">blogger</a></p></div>
-</div>
+</blockquote></div>
 </div>
 
 </div>
