--- a/index.html
+++ b/index.html
@@ -14,31 +14,16 @@
 <link href="assets/kathamo/kathamo.css" rel="stylesheet"/>
 
 <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-<style>
-p, blockquote { font-size: 21px; font-weight: 500; font-family: serif; color: #666; line-height: 34px; }
-
-a, a:visited { color: #39AE7B; text-decoration: none; outline: 0; }
-a:hover, a:focus { color: #39AE7B; border: none; }
-
-.page { height: 100vh; width: 100%; }
-
-</style>
 </head>
 <body>
-<div id="getting-started" class="page clearfix">
-<div class="vertical-center-wrapper">
-<div class="vertical-center">
-
 <div class="container">
 <div class="row">
+<div class="col-lg-7 col-md-9 col-sm-10 col-sm-offset-1" style="margin-top: 21%">
+<h4>Debashis Barman</h4>
 
-<div class="col-lg-8 col-md-12 col-sm-12">
-<p>@<a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">iDebashisBarman</a> Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="http://debashisbarman.tumblr.com">blogger</a></p>
-</div>
+<p>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></p>
 
-</div>
-</div>
-
+<p>Follow on <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a></p>
 </div>
 </div>
 </div>
