--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 <link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 </head>
 <body>
-<div class="container">
-<div class="row">
-<div class="col-lg-7 col-md-9 col-sm-10 col-sm-offset-1" style="margin-top: 21%">
+<div class="container clearfix">
+<div class="row clearfix">
+<div class="col-lg-7 col-md-9 col-sm-10 col-sm-offset-1 clearfix" style="margin-top: 21%; margin-bottom: 21%;">
 <h4>Debashis Barman</h4>
 
 <p>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></p>
