--- a/index.html
+++ b/index.html
@@ -1,32 +1,13 @@
-<!DOCTYPE html>
-<html>
+---
+layout: default
+---
 
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
+{% include header.html %}
 
-<title>Debashis Barman</title>
+{% include projects.html %}
 
-<meta name="description" content="Freelance web designer and developer; specialize in minimalist mobile-friendly development; passionate programmer and occasional blogger">
-<meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/>
+{% include articles.html %}
 
-<link href="assets/kathamo/kathamo.css" rel="stylesheet"/>
+{% include references.html %}
 
-<link href="/assets/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-</head>
-<body>
-<div class="container clearfix">
-<div class="row clearfix">
-<div class="col-lg-7 col-md-9 col-sm-10 col-sm-offset-1 clearfix" style="margin-top: 21%; margin-bottom: 21%;">
-<h4>Debashis Barman</h4>
-
-<p>Freelance web <a target="_blank" href="http://www.behance.net/debashisbarman/">designer</a> and <a target="_blank" href="https://www.github.com/debashisbarman/">developer</a>; specialize in minimalist mobile-friendly development; passionate programmer and occasional <a target="_blank" href="https://www.medium.com/@iDeb/">blogger</a></p>
-
-<p>Follow on <a target="_blank" href="https://www.twitter.com/@iDebashisBarman/">@iDebashisBarman</a></p>
-</div>
-</div>
-</div>
-</body>
-</html>
-
+{% include footer.html %}
