--- a/index.html
+++ b/index.html
@@ -2,14 +2,20 @@
 layout: default
 ---
 
+<body id="home">
+
 {% include header.html %}
+
+{% include about.html %}
 
 {% include projects.html %}
 
 {% include articles.html %}
 
-{% include references.html %}
+{% include skills.html %}
 
 {% include footer.html %}
 
 {% include google_analytics.html %}
+
+</body>
