--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 layout: default
 ---
 
-<body id="home">
+<body class="home">
 
 {% include header.html %}
 
-{% include about.html %}
+{% include about-articles.html %}
 
-{% include projects.html %}
+{% include portfolio.html %}
 
-{% include articles.html %}
-
-{% include skills.html %}
+{% include contact.html %}
 
 {% include footer.html %}
 
-{% include google_analytics.html %}
+{% include google-analytics.html %}
 
 </body>
